Fix deprecation warning in ERB template

--- a/templates/hostconfig.erb
+++ b/templates/hostconfig.erb
@@ -4,11 +4,11 @@
 #
 
 [hostconfig]
-host = <%= name %>
-version = <%= version %>
-enable = <%= enable %>
-source = <%= source %>
-destination = <%= destination %>
-args = <%= args %>
-retention = <%= retention %>
+host = <%= @name %>
+version = <%= @version %>
+enable = <%= @enable %>
+source = <%= @source %>
+destination = <%= @destination %>
+args = <%= @args %>
+retention = <%= @retention %>
 
