--- a/templates/pool.erb
+++ b/templates/pool.erb
@@ -1,5 +1,5 @@
 # file part managed by puppet
-[<%= name %>]
-max_process = <%= max_process %>
-destination_dir = <%= destination_dir %>
+[<%= @name %>]
+max_process = <%= @max_process %>
+destination_dir = <%= @destination_dir %>
 
